# crypto-recommendation

./: CMakeLists.txt  LICENSE  Makefile  README.md  cluster.conf  main.cpp  tests.cpp
lib/: crypto_rec.hpp  lsh_cube.hpp  utils.cpp  utils.hpp
lib/clustering_phases/: assignment.hpp  initialization.hpp  silhouette.hpp  update.hpp
lib/data_structures/: cust_hashtable.hpp  cust_vector.hpp  tweet.cpp  tweet.h  user.h  vector_bucket.hpp
lib/generators/: cosine_g_gen.hpp  cosine_h_gen.hpp  euclidean_f_gen.hpp  euclidean_h_gen.hpp  euclidean_phi_gen.hpp  hash_generator.hpp  hypercube_gen.hpp
lib/in_out/: arg_parser.cpp  arg_parser.h  vector_reader.hpp
